# genealogy

./: README.md  pyproject.toml  setup.py
genealogy/gedcomish/: common.py  configure.py  logging.json
genealogy/gedcomish/gedcom555ish/: lineage_linked_gedcom_file.py  primitives.py
genealogy/holgerish/: analys.md  html.py  logging.json
src/gedcom555ish/writer/: lineage_linked_gedcom_file.py
src/gedcomish/: common.py  logging.json
src/gedcomish/gedcom555ish/: lineage_linked_gedcom_file.py  primitives.py
src/holgerish/: configure.py  html.py  html_parser.py  logging.json
tests/gedcom555ish/writer/: test_lineage_linked_gedcom_file.py
tests/gedcomish/gedcom555ish/: 555SAMPLE-shuffled-uppercased.GED  555SAMPLE-shuffled.GED  test_lineage_linked_gedcom_file.py
